--- a/Lock and Key.html
+++ b/Lock and Key.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play Lock and Key.</tw-noscript></noscript></tw-story>
-<tw-storydata name="Lock and Key" startnode="1" creator="Twine" creator-version="2.3.16" ifid="F7614105-D670-40B3-A2EE-80EFEE3D8B67" zoom="1" format="Harlowe" format-version="3.2.3" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">tw-sidebar
+<tw-storydata name="Lock and Key" startnode="23" creator="Twine" creator-version="2.3.16" ifid="F7614105-D670-40B3-A2EE-80EFEE3D8B67" zoom="1" format="Harlowe" format-version="3.2.3" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">tw-sidebar
 {
 display: none;
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Start" tags="no-header" position="421,26" size="100,100">(font:&quot;font-size:200%&quot;)[(text-colour:purple)[Tutorial]]
@@ -37,7 +37,16 @@ You need to find a door to escape from the dungeon. The door is hidden until you
 
 [[Left-&gt;Room14]]
 [[Center-&gt;Room11]] 
-[[Right-&gt;Room10]] </tw-passagedata><tw-passagedata pid="3" name="Break the loop" tags="" position="263,41" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="4" name="Room2" tags="Room" position="214,678" size="100,100">* The room is empty.
+[[Right-&gt;Room10]] </tw-passagedata><tw-passagedata pid="3" name="Future improvement" tags="no-header" position="261,41" size="100,100">(text-colour:cyan)[&#39;&#39;Future improvement&#39;&#39;]
+
+
+(text-colour:green)[Adding rooms, items, enemies
+
+Improve mechanics (e.g. room connectivity, items&#39; functions/debuffs, enemies&#39; behavior)
+
+Adding a consistent story (e.g. What is lock, key and door in someone&#39;s life?)]
+
+[[And then-&gt;Thank you!]] </tw-passagedata><tw-passagedata pid="4" name="Room2" tags="Room" position="214,678" size="100,100">* The room is empty.
 
 [[Left-&gt;Room4]] 
 [[Right-&gt;Room5]] </tw-passagedata><tw-passagedata pid="5" name="Door" tags="" position="850,1169" size="100,100">What is Lock?
@@ -121,10 +130,13 @@ Software: Twine
 ]](else:)[
 [[Proceed-&gt;Room12]] 
 ]
-</tw-passagedata><tw-passagedata pid="23" name="Note" tags="" position="185,169" size="100,100">item 1: Flipped mirror : Lock
-item 2:
-item 3: Sarcastic PC : Key
-</tw-passagedata><tw-passagedata pid="24" name="Room14" tags="" position="165,411" size="100,100">(if: $enemy1 is true)[
+</tw-passagedata><tw-passagedata pid="23" name="Title" tags="Title no-header" position="565,23" size="100,100">(text-style:&quot;sway&quot;)[(text-colour:red)[&#39;&#39;Lock and Key&#39;&#39;]]
+
+by Coolduck777
+
+
+
+[[Start-&gt;Start]]</tw-passagedata><tw-passagedata pid="24" name="Room14" tags="" position="165,411" size="100,100">(if: $enemy1 is true)[
 (text-colour:red)[
   * Enemy appeared.
   (link: &quot;Fight (Sanity -20)&quot;)[(set: $sanity to $sanity-20)(set: $enemy1 to false)(goto: &quot;Room3&quot;)]
@@ -179,7 +191,7 @@ item 3: Sarcastic PC : Key
 	 (link: &quot;Take broken camera and proceed&quot;)[(set: $item1 to true)(goto: &quot;Room7&quot;)]
 ](else:)[
 	[[Proceed-&gt;Room7]]
-]</tw-passagedata></tw-storydata>
+]</tw-passagedata><tw-passagedata pid="33" name="Thank you!" tags="no-header" position="168,151" size="100,100">(text-style:&quot;blink&quot;)[(text-colour:lime)[Thank you for listening!]]</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">"use strict";var _slicedToArray=function(){return function(e,t){if(Array.isArray(e))return e;if(Symbol.iterator in Object(e))return function(e,t){var n=[],r=!0,a=!1,i=void 0;try{for(var o,s=e[Symbol.iterator]();!(r=(o=s.next()).done)&&(n.push(o.value),!t||n.length!==t);r=!0);}catch(e){a=!0,i=e}finally{try{!r&&s.return&&s.return()}finally{if(a)throw i}}return n}(e,t);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}!function(){
 /**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
